Update Portfolio and improve footer

--- a/_harp/public/_partials/p-items/portfolio1.jade
+++ b/_harp/public/_partials/p-items/portfolio1.jade
@@ -6,24 +6,27 @@
 			.row
 				.col-lg-8.col-lg-offset-2
 					.modal-body
-						h2 Undocumoney.com
+						h2 
+							a(href="http://purplerosetranslations.com" target="_blank") Purple Rose Services
 						hr
-						img.img-responsive.img-centered(src='img/portfolio/undocumoney.jpg', alt='')
-						p  I am particularly proud of this project. It was a pro-bono effort to help a group of fellow immigrant youth with their #undocumoney campaign.
-						p NOTE: This site is no longer online.
+						a(href="http://purplerosetranslations.com" target="_blank")
+							img.img-responsive.img-centered(src='img/portfolio/purple-rose-services.jpg', alt='Purple Rose Services')
+						p This is a static website built for Ileana Salinas. She provides translation and transcription services.
+						p As a small business owner, she didn't need a full blown WordPress website, as she wouldn't have the time to be updating or maintaining a blog. A static website was the perfect solution for her.
 						ul.list-inline.item-details
 							li
 								| Client:
 								strong
-									p Non Organizational
+									p
+										a(href="http://purplerosetranslations.com" target="_blank") Ileana Salinas
 							li
 								| Date:
 								strong
-									p September 2015
+									p September 2016
 							li
 								| Service:
 								strong
-									p Web Development
+									p Static Site
 						.text-center
 							button.btn.btn-default(type='button', data-dismiss='modal')
 								i.fa.fa-times  Close
