--- a/_harp/public/_partials/p-items/portfolio2.jade
+++ b/_harp/public/_partials/p-items/portfolio2.jade
@@ -6,20 +6,22 @@
 			.row
 				.col-lg-8.col-lg-offset-2
 					.modal-body
-						h2 RedadasDeObama.com
+						h2 
+							a(href="http://ileanaycelso.com" target="_blank") IleanaYCelso.com
 						hr
-						img.img-responsive.img-centered(src='img/portfolio/redadasdeobama.png', alt='')
-						p This was a great project to work on, and it is my first public app using Meteor.js with React.js as the front end layer.
-						p The project is still in BETA and under active development.
-						
+						a(href="http://ileanaycelso.com" target="_blank")
+							img.img-responsive.img-centered(src='img/portfolio/ileana-y-celso.jpg', alt='')
+						p This is a website for a project my wife and I have started. We sing at events and at our congregation, so we decided to create this website to market ourselves and start creating an online presence.
+
+						ul.list-inline.item-details
 							li
 								| Date:
 								strong
-									p June 2016
+									p July 2016
 							li
 								| Service:
 								strong
-									p Web App Development
+									p Static Site
 						.text-center
 							button.btn.btn-default(type='button', data-dismiss='modal')
 								i.fa.fa-times  Close
