--- a/_harp/public/_partials/portfolio.jade
+++ b/_harp/public/_partials/portfolio.jade
@@ -1,78 +1,68 @@
 #portfolio
 	.row
-		.col-md-3.col-sm-6
-			.box-bg
-				img.img-responsive(src="img/portfolio/undocumoney.jpg", alt="")
-			.box-content
-				a(href="#portfolio1", data-toggle="modal", class="text-center")
-					h3 Undocumoney.com
-					p.text-center
-						i.fa.fa-search.fa-6
+		.col-md-4.col-sm-6.item
+			.padding
+				.box-bg
+					img.img-responsive(src="img/portfolio/purple-rose-services.jpg", alt="Purple Rose Services")
+				.box-content
+					a(href="#portfolio1", data-toggle="modal", class="text-center")
+						h3 Purple Rose Services
+						p.text-center
+							i.fa.fa-search.fa-6
 
-		.col-md-3.col-sm-6
-			.box-bg
-				img.img-responsive(src="img/portfolio/redadasdeobama.png", alt="")
-			.box-content
-				a(href="#portfolio2", data-toggle="modal", class="text-center")
-					h3 RedadasDeObama.com
-					p.text-center
-						i.fa.fa-search.fa-6
-
-
-		.col-md-3.col-sm-6
-			.box-bg
-				img.img-responsive(src="img/portfolio/big-brothers-big-sisters.jpg", alt="")
-			.box-content
-				a(href="#portfolio3", data-toggle="modal", class="text-center")
-					h3 GoBigBrother.org
-					p.text-center
-						i.fa.fa-search.fa-6
-
-		.col-md-3.col-sm-6
-			.box-bg
-				img.img-responsive(src="img/portfolio/movimientocosecha.png", alt="")
-			.box-content
-				a(href="#portfolio4", data-toggle="modal", class="text-center")
-					h3 MovimientoCosecha.com
-					p.text-center
-						i.fa.fa-search.fa-6
+		.col-md-4.col-sm-6.item
+			.padding
+				.box-bg
+					img.img-responsive(src="img/portfolio/ileana-y-celso.jpg", alt="")
+				.box-content
+					a(href="#portfolio2", data-toggle="modal", class="text-center")
+						h3 Ileana Y Celso
+						p.text-center
+							i.fa.fa-search.fa-6
 
 
-		.col-md-3.col-sm-6
-			.box-bg
-				img.img-responsive(src="img/portfolio/drive-for-democracy.jpg", alt="")
-			.box-content
-				a(href="#portfolio5", data-toggle="modal", class="text-center")
-					h3 Drive For Democracy
-					p.text-center
-						i.fa.fa-search.fa-6
+		.col-md-4.col-sm-6.item
+			.padding
+				.box-bg
+					img.img-responsive(src="img/portfolio/big-brothers-big-sisters.jpg", alt="")
+				.box-content
+					a(href="#portfolio3", data-toggle="modal", class="text-center")
+						h3 GoBigBrother.org
+						p.text-center
+							i.fa.fa-search.fa-6
 
-		.col-md-3.col-sm-6
-			.box-bg
-				img.img-responsive(src="img/portfolio/keephb1403.jpg", alt="")
-			.box-content
-				a(href="#portfolio6", data-toggle="modal", class="text-center")
-					h3 KeepHB1403
-					p.text-center
-						i.fa.fa-search.fa-6
+		.col-md-4.col-sm-6.item
+			.padding
+				.box-bg
+					img.img-responsive(src="img/portfolio/movimientocosecha.png", alt="")
+				.box-content
+					a(href="#portfolio4", data-toggle="modal", class="text-center")
+						h3 MovimientoCosecha.com
+						p.text-center
+							i.fa.fa-search.fa-6
 
-		.col-md-3.col-sm-6
-			.box-bg
-				img.img-responsive(src="img/portfolio/plazacosecha.png", alt="")
-			.box-content
-				a(href="#portfolio7", data-toggle="modal", class="text-center")
-					h3 PlazaCosecha.com
-					p.text-center
-						i.fa.fa-search.fa-6
 
-		.col-md-3.col-sm-6
-			.box-bg
-				img.img-responsive(src="img/portfolio/fonseca.jpg", alt="")
-			.box-content
-				a(href="#portfolio8", data-toggle="modal", class="text-center")
-					h3 FonsecaForTempe.com
-					p.text-center
-						i.fa.fa-search.fa-6
+		.col-md-4.col-sm-6.item
+			.padding
+				.box-bg
+					img.img-responsive(src="img/portfolio/drive-for-democracy.jpg", alt="")
+				.box-content
+					a(href="#portfolio5", data-toggle="modal", class="text-center")
+						h3 Drive For Democracy
+						p.text-center
+							i.fa.fa-search.fa-6
+
+		.col-md-4.col-sm-6.item
+			.padding
+				.box-bg
+					img.img-responsive(src="img/portfolio/keephb1403.jpg", alt="")
+				.box-content
+					a(href="#portfolio6", data-toggle="modal", class="text-center")
+						h3 KeepHB1403
+						p.text-center
+							i.fa.fa-search.fa-6
+
+
 
 != partial('p-items/portfolio1.jade')
 != partial('p-items/portfolio2.jade')
