Trying out different ways of getting shadows

--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -30,7 +30,8 @@ section#homejb
 					a.nav-link(href="#about", class="btn btn-success") Learn More...
 				.col-sm-6
 					#logo-svg
-						span.icon.icon-logo-square
+						img.glow.img-responsive(src="img/logo-square.svg", alt="Pocholabs")
+						!= partial('_partials/logo-square.jade')
 
 
 .container-fluid.home-lead  
