--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -32,7 +32,7 @@ section#homejb
 				.col-sm-6
 					#logo-svg
 						//- img.img-responsive(src="img/optimised.svg", alt="Pocholabs")
-						svg(style="animation: glow 1.4s ease-in-out infinite alternate;", preserveAspectRatio="xMidYMid meet", height="400", width="400")
+						svg(style="animation: glow .8s ease-in-out infinite alternate;", preserveAspectRatio="xMidYMid meet", height="400", width="400")
 							use(xlink:href="#svg-logo")
 
 
