Fix margins in #portfolio serction

--- a/_harp/public/main.less
+++ b/_harp/public/main.less
@@ -358,6 +358,11 @@ h3{
 
 #portfolio{
 	margin: 0px;
+
+	& .row{
+		margin-left: 0px;
+		margin-right: 0px;
+	}
 	& .item{
 		position: relative;
 		padding: 0px;
