--- a/_harp/public/assets/css/modules/variables.scss
+++ b/_harp/public/assets/css/modules/variables.scss
@@ -1,7 +1,8 @@
 
 $color-black: #303030;
-$color-yellow: #fff35a;
 $color-white: #ececec;
+$color-blue: #38BEE5;
+$color-orange: #F60;
 
 $anim-timing-service: 0.5s;
 
