--- a/_harp/public/assets/css/main.scss
+++ b/_harp/public/assets/css/main.scss
@@ -3,26 +3,24 @@
 
 @import 'modules/variables';
 @import 'modules/reset';
+@import 'modules/utils';
 @import 'modules/modal';
 @import 'modules/grid';
 @import 'modules/buttons';
 
 @import 'aos';
 
-.img-responsive {
-  width: 100%;
-}
-
 nav {
   .navbar-header {
     background: $color-blue;
-    border-top: 2px solid darken(#38BEE5, 5%);
+    border-top: 2px solid darken(#38BEE5, 10%);
     width: 100%;
     position: fixed;
     left: 0px;
     z-index: 10;
     bottom: 0px;
     padding: 5px 25px;
+    box-shadow: 0px 0px 15px rgba(#000000, 0.6);;
     i.fa-bars {
       margin: 10px 0px;
       font-size: 2.5em;
@@ -39,5 +37,18 @@ nav {
   }
   #collapsible-nav {
     display: none;
+  }
+}
+
+header {
+  background-image: url('../img/m.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  color: #fff;
+  svg {
+    width: 100%;
+    height: 100%;
   }
 }
