Add color to sections

--- a/_harp/public/_partials/logo-square.jade
+++ b/_harp/public/_partials/logo-square.jade
@@ -1,5 +1,5 @@
 // Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)
-svg.img-responsive(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', width='800px', height='800px', viewbox='0 0 800 800', enable-background='new 0 0 800 800', xml:space='preserve')
+svg(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', width='800px', height='800px', viewbox='0 0 800 800', enable-background='new 0 0 800 800', xml:space='preserve')
 	g
 		g
 			path(fill='#F3FDFF', d='M320.469,561.587c0-6.954-5.469-13.173-10.469-17.269v-65.524c0-2.289,1.694-4.553,0.611-6.569\
