--- a/_harp/public/assets/css/modules/variables.scss
+++ b/_harp/public/assets/css/modules/variables.scss
@@ -2,7 +2,7 @@
 $color-black: #303030;
 $color-white: #ececec;
 $color-blue: #38BEE5;
-$color-orange: #F60;
+$color-orange: #eb6810;
 
 $anim-timing-service: 0.5s;
 
