--- a/_harp/public/assets/css/modules/utils.scss
+++ b/_harp/public/assets/css/modules/utils.scss
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.img-circle {
+  border-radius: 100%;
+}
+
 .overlay {
   position: absolute;
   top: 0px;
@@ -20,4 +24,11 @@
   &.white {
     background-color: rgba(250,250,250,0.8);
   }
+  &.orange {
+    background-color: rgba(235, 104, 16, 0.8);
+  }
+}
+
+section {
+  padding: 30px 0px;
 }
