--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -14,7 +14,7 @@ nav(role="navigation")
 			li
 				a.nav-link(href="#contact") Contact
 
-header#homejb
+header
 	.overlay.blue
 	.container
 		.row
@@ -35,6 +35,7 @@ section#about
 				p Whether you want to stand out to your local customers, or want an engaging microsite for a social justice campaign, you can be sure we will bring our Latinx identities and creativeness to make your project vision a reality.
 
 section#services
+	.overlay.blue
 	.container      
 		.row
 			.column.column-12
