--- a/_harp/public/assets/css/main.scss
+++ b/_harp/public/assets/css/main.scss
@@ -25,6 +25,7 @@ nav {
       margin: 10px 0px;
       font-size: 2.5em;
       color: #fff;
+      cursor: pointer;
     }
     a.navbar-brand {
       padding: 0px 20px;
@@ -37,6 +38,37 @@ nav {
   }
   #collapsible-nav {
     display: none;
+    position: relative;
+    &.display{
+      display: flex;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top:0px;
+      left: 0px;
+      z-index: 8;
+      padding-bottom: 72px;
+      .nav {
+        z-index: 9;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        a {
+          color: #fff;
+          text-decoration: none;
+          font-size: 2em;
+          font-weight: bolder;
+          padding: 20px;
+          border-radius: 3px;
+          &:hover {
+            background: rgba(250,250,250,0.7);
+            box-shadow: 0px 0px 15px #000;
+          }
+        }
+      }
+    }
   }
 }
 
