--- a/_harp/public/index.jade
+++ b/_harp/public/index.jade
@@ -21,9 +21,10 @@ header
 		.row
 			.column.column-6
 				h1 Making ideas come to life
-				p Here at PochoLabs, we love merging design and function to create beautiful online spaces for our clients. From custom made web applications, to online portals.
+				p.sm-hidden Here at PochoLabs, we love merging design and function to create beautiful online spaces for our clients. From custom made web applications, to online portals.
 			.column.column-6
-				!= partial('_partials/logo-square.jade')
+				#logo-svg
+					span.icon.icon-logo-square
 
 section#about
 	.container  
