--- a/_harp/public/assets/css/modules/utils.scss
+++ b/_harp/public/assets/css/modules/utils.scss
@@ -33,3 +33,29 @@ section {
   position: relative;
   padding: 30px 0px;
 }
+
+
+@keyframes neon {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px $bright, 0 0 70px $bright, 0 0 80px $bright, 0 0 100px $bright, 0 0 150px $bright;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px $bright, 0 0 35px $bright, 0 0 40px $bright, 0 0 50px $bright, 0 0 75px $bright;
+  }
+}
+@-webkit-keyframes neon {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px $bright, 0 0 70px $bright, 0 0 80px $bright, 0 0 100px $bright, 0 0 150px $bright;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px $bright, 0 0 35px $bright, 0 0 40px $bright, 0 0 50px $bright, 0 0 75px $bright;
+  }
+}
+@-moz-keyframes neon {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px $bright, 0 0 70px $bright, 0 0 80px $bright, 0 0 100px $bright, 0 0 150px $bright;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px $bright, 0 0 35px $bright, 0 0 40px $bright, 0 0 50px $bright, 0 0 75px $bright;
+  }
+}
