--- a/_harp/public/assets/css/main.scss
+++ b/_harp/public/assets/css/main.scss
@@ -71,6 +71,85 @@ nav {
       }
     }
   }
+
+  @media screen and (min-width: $break-medium) {
+    border-bottom: none;
+    box-shadow: 0px 0px 15px #000000;
+    display: flex;
+    position: fixed;
+    top: 0px;
+    z-index: 10;
+    background: rgba(56, 190, 230,0.7);
+    background: rgba(0,0,0,0.75);
+    width: 100%;
+    padding: 10px 20px;
+    .navbar-header {
+      display: inline-block;
+      background: none;
+      border: none;
+      width: 100%;
+      max-width: 250px;
+      height: 100%;
+      position: relative;
+      float: left;
+      padding: 0px;
+      z-index: 10;
+      box-shadow: none;
+      i.fa-bars {
+        display: none;
+      }
+      a.navbar-brand {
+        display: block;
+        // width: 100%;
+        // height: 100%;
+        position: relative;
+        float: left;
+        padding: 0px;
+        #logo-svg {
+          position: relative;
+          float: left;
+          path, g path {
+            fill: #fff!important;
+          }
+        }
+      }
+    }
+    #collapsible-nav {
+      float: right;
+      display: inline-block;
+      position: relative;
+      width: 100%;
+      & > .overlay.orange {
+        display: none;
+      }
+      .nav {
+        z-index: 11;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        .link {
+          flex: 1 1 100%;
+          a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.3em;
+            font-weight: bold;
+            padding: 20px 10px;
+            border-radius: 3px;
+            height: 100%;
+            z-index: 20;
+            &:hover {
+              color: #a4e1f2;
+            }
+        }
+
+        }
+      }
+    }
+  }
 }
 
 header {
